--- a/servers/docker-compose.yml
+++ b/servers/docker-compose.yml
@@ -30,5 +30,7 @@ services:
         build:
             context: c
             dockerfile: Dockerfile_proc_spawn
+        environment:
+            - WORKER_COUNT=1000
         ports:
             - 3005:3001
