--- a/control_backend/pyproject.toml
+++ b/control_backend/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 PyYAML = "^5.3.1"
+pydantic = "^1.7.3"
 
 [tool.poetry.dev-dependencies]
 
