Add apache_httpd with mpm event to servers

--- a/servers/docker-compose.yml
+++ b/servers/docker-compose.yml
@@ -34,3 +34,9 @@ services:
             - WORKER_COUNT=1000
         ports:
             - 3001:3001
+
+    apache_httpd:
+        build:
+            context: apache_httpd
+        ports:
+            - 3001:80
