Add other mpm-s to apache_httpd

--- a/servers/apache_httpd/Dockerfile
+++ b/servers/apache_httpd/Dockerfile
@@ -1,4 +1,9 @@
-FROM httpd:alpine
+FROM httpd
+
+ARG variant
+
 COPY index.lua ./htdocs
-COPY config .
-RUN cat config >> conf/httpd.conf
+COPY httpd.conf ./conf
+COPY config_base .
+COPY config_$variant .
+RUN { cat config_base; cat config_$variant; } >> conf/httpd.conf
