--- a/servers/c/Dockerfile
+++ b/servers/c/Dockerfile
@@ -1,10 +1,12 @@
 FROM alpine as builder
 
+ARG variant
+
 RUN apk update && apk add build-base
 
 WORKDIR /app
-COPY single.c .
-RUN gcc -o app single.c
+COPY $variant.c .
+RUN gcc -o app $variant.c
 
 FROM alpine
 COPY --from=builder /app/app /app
