--- a/servers/c_proc_spawn/Dockerfile
+++ b/servers/c_proc_spawn/Dockerfile
@@ -1,12 +1,9 @@
 FROM alpine as builder
-
-ARG variant
-
 RUN apk update && apk add build-base
 
 WORKDIR /app
-COPY $variant.c .
-RUN gcc -o app $variant.c
+COPY main.c .
+RUN gcc -o app main.c
 
 FROM alpine
 COPY --from=builder /app/app /app
