--- a/servers/nginx_fastcgi_cgi/default.conf
+++ b/servers/nginx_fastcgi_cgi/default.conf
@@ -3,6 +3,6 @@ server {
 
     location / {
         fastcgi_param SCRIPT_FILENAME /fcgi/app;
-        fastcgi_pass unix:/fcgi/fcgi.sock;
+        fastcgi_pass cgi_back;
     }
 }
