Add keepalive to nginx proxy in nodejs_nginx_pm2

--- a/servers/nodejs_nginx_pm2/default.conf
+++ b/servers/nodejs_nginx_pm2/default.conf
@@ -1,7 +1,14 @@
+upstream back_upstream {
+    server backend:3000;
+    keepalive 250;
+}
+
 server {
     listen 80;
 
     location / {
-        proxy_pass http://backend:3000/;
+        proxy_pass http://back_upstream;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
     }
 }
