--- a/servers/nodejs_nginx_pm2_fork/default.conf
+++ b/servers/nodejs_nginx_pm2_fork/default.conf
@@ -3,5 +3,7 @@ server {
 
     location / {
         proxy_pass http://back;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
     }
 }
