Fix up control_backend dockerfile

--- a/control_backend/Dockerfile
+++ b/control_backend/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.8-alpine
-RUN apk update && apk add build-base libressl-dev musl-dev libffi-dev docker-cli
+rUN apk update && apk add build-base libressl-dev musl-dev libffi-dev docker-cli rust cargo
 RUN pip install poetry docker-compose
 
 COPY pyproject.toml poetry.lock ./
